Fix details-check image aspect ratio on mobile
Added height: auto to maintain proper aspect ratio when scaling the image on all screen sizes.

--- a/templates/HomePage/Details/Details.module.sass
+++ b/templates/HomePage/Details/Details.module.sass
@@ -33,6 +33,7 @@
         height: 356px
     .image
         opacity: 1
+        height: auto
         +m
             width: 262px
 
